# rpg-sfml

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENCE  LICENSE  README.md
.githooks/: pre-commit  pre-push
.github/: copilot-instructions.md
cmake/: Format.cmake  FormatCheck.cmake  Tidy.cmake  VendoredSFML.cmake
extlib/libs-linux-gcc/x64/: libsfml-audio.so.3.1.0  libsfml-system.so.3.1  libsfml-window.so.3.1
include/RPG/Game/: Game.hpp
include/main/: Camera.hpp  Game.hpp  OverworldRuntime.hpp  OverworldTypes.hpp  Player.hpp  World.hpp
openspec/changes/archive/2026-04-29-deterministic-procedural-overworld-vertical-slice/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-29-extract-gameplay-modules/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-29-game-loop-architecture/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-30-add-world-chunk-cache/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-30-extract-terrain-generator/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-30-layered-terrain-generation/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-30-relax-finite-world-camera/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-30-streaming-overworld-chunks/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-30-visible-chunk-rendering/: design.md  tasks.md
openspec/changes/archive/2026-04-30-world-config/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-01-add-chunk-level-metadata/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-01-add-overworld-tileset-rendering/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-01-add-player-walk-animation/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-01-debug-overworld-zoom-grid/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-01-extract-overworld-runtime/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-01-grid-locked-player-movement/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-01-introduce-input-boundary/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-01-render-snapshot-boundary/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-01-split-world-generation-from-storage/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-02-add-data-only-world-content/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-02-add-world-content-boundary/: design.md  proposal.md  tasks.md
openspec/changes/batch-terrain-and-grid-rendering/: design.md  proposal.md  tasks.md
openspec/changes/visible-chunk-rendering/: proposal.md
openspec/specs/batched-overworld-geometry/: spec.md
openspec/specs/debug-overlay-display/: spec.md
openspec/specs/game-runtime/: spec.md
openspec/specs/game-shell-decomposition/: spec.md
openspec/specs/gameplay-modules/: spec.md
openspec/specs/generated-content-rendering/: spec.md
openspec/specs/input-boundary/: spec.md
openspec/specs/overworld-autotile-rendering/: spec.md
openspec/specs/overworld-road-overlays/: spec.md
openspec/specs/overworld-tileset-rendering/: spec.md
openspec/specs/overworld-vertical-slice/: spec.md
openspec/specs/player-occlusion-optimization/: spec.md
openspec/specs/player-sprite-animation/: spec.md
openspec/specs/render-snapshots/: spec.md
openspec/specs/road-network-topology/: spec.md
openspec/specs/road-stamping/: spec.md
openspec/specs/runtime-asset-layout/: spec.md
openspec/specs/stable-overworld-rendering/: spec.md
openspec/specs/tileset-asset-loading/: spec.md
openspec/specs/vegetation-content/: spec.md
openspec/specs/visible-chunk-rendering/: spec.md
openspec/specs/world-chunk-caching/: spec.md
openspec/specs/world-chunk-metadata/: spec.md
openspec/specs/world-content/: spec.md
src/: main.cpp
src/Game/: CMakeLists.txt  Game.cpp  main.cpp
src/main/: BiomeSampler.cpp  BiomeSampler.hpp  CMakeLists.txt  Camera.cpp  Game.cpp  GameAssetSupport.hpp  GameDebugOverlaySupport.cpp  GameDebugOverlaySupport.hpp  GameEventSupport.cpp  GameEventSupport.hpp  GameOcclusionCompositeSupport.cpp  GameOcclusionCompositeSupport.hpp  GameRenderBatchSupport.cpp  GameRenderBatchSupport.hpp  GameRenderPlanSupport.cpp  GameRenderPlanSupport.hpp  GameRenderSupport.cpp  GameRenderSupport.hpp  GameResourceBootstrapSupport.cpp  GameResourceBootstrapSupport.hpp  GameRuntimeSupport.cpp  GameRuntimeSupport.hpp  GameSceneRenderSupport.cpp  GameSceneRenderSupport.hpp  OverworldRuntime.cpp  Player.cpp  PlayerOcclusionSilhouetteSupport.hpp  RoadNetworkSupport.hpp  RoadOverlayTilesetSupport.cpp  RoadOverlayTilesetSupport.hpp  RoadOverlayWorldSupport.hpp  RoadStampSupport.hpp  TerrainAutotileSupport.cpp  TerrainAutotileSupport.hpp  TilesetAssetLoader.cpp  TilesetAssetLoader.hpp  VegetationAtlasSupport.cpp  VegetationAtlasSupport.hpp  World.cpp  WorldContent.cpp  (+4 more)
tests/: CMakeLists.txt  GameAssetSupportTests.cpp  GameDebugOverlaySupportTests.cpp  GameEventSupportTests.cpp  GameOcclusionCompositeSupportTests.cpp  GameRenderBatchSupportTests.cpp  GameRenderPlanSupportTests.cpp  GameRenderSupportTests.cpp  GameResourceBootstrapSupportTests.cpp  GameRuntimeSupportTests.cpp  GameSceneRenderSupportTests.cpp  GameplayModuleTypesTests.cpp  OverworldRuntimeTests.cpp  OverworldVerticalSliceTests.cpp  PlayerOcclusionSilhouetteTests.cpp  RoadOverlayTilesetSupportTests.cpp  TerrainAutotileSupportTests.cpp  TilesetAssetLoaderTests.cpp  WorldTerrainGeneratorTests.cpp  check_game_debug_overlay_boundary.cmake  check_game_module_boundary.cmake  check_game_occlusion_composite_boundary.cmake  check_game_render_plan_boundary.cmake  check_game_rendering_boundary.cmake  check_game_runtime_shell_boundary.cmake  check_game_scene_render_boundary.cmake  check_main_asset_staging.cmake  check_main_handoff.cmake
tools/: install-git-hooks.sh
(+193 files in other folders)
